разработана вторая страница с электронными компонентами

--- a/frontend/src/styles/styles_css/card.css
+++ b/frontend/src/styles/styles_css/card.css
@@ -1,4 +1,64 @@
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  gap: 3rem;
+  justify-content: center;
+  max-width: 1300px;
+}
+
 .card {
-  width: 200px;
-  height: 400px;
+  background: white;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
+.card__button {
+  background-image: var(--color-gradient);
+  width: 100%;
+  height: 40px;
+  border: 0 solid;
+  border-radius: 30px;
+  font-size: var(--font-size-desktop);
+}
+
+.card:hover {
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+}
+
+.photo {
+  height: 220px;
+  background-image: var(--color-gradient);
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: contain;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+h2 {
+  font-size: var(--font-size-desktop-bold);
+  margin: 0 auto;
+  margin: 5px 0 15px 0;
+  color: var(--color-black);
+}
+
+.description {
+  font-size: var(--font-size-desktop);
+  color: var(--color-black);
+  width: 80%;
+  text-align: center;
+  margin-bottom: 20px;
 }/*# sourceMappingURL=card.css.map */
