--- a/frontend/src/styles/pages/home.sass
+++ b/frontend/src/styles/pages/home.sass
@@ -44,7 +44,7 @@
     &__img
         width: 500px
         height: 350px
-        background-image: url(../../public/image/electronic.png)
+        background-image: url(/images/electronic/electronic.png)
         background-size: cover
         background-position: center
     &__text
@@ -87,7 +87,7 @@
     &__img
         width: 500px
         height: 350px
-        background-image: url(../../public/image/mechanics.png)
+        background-image: url(/images/machanical/mechanics.png)
         background-size: cover
         background-position: center
     &__text
