--- a/frontend/src/styles/styles_css/home.css
+++ b/frontend/src/styles/styles_css/home.css
@@ -44,7 +44,7 @@
 .electronic__img {
   width: 500px;
   height: 350px;
-  background-image: url(../../public/image/electronic.png);
+  background-image: url(/images/electronic/electronic.png);
   background-size: cover;
   background-position: center;
 }
@@ -92,7 +92,7 @@
 .mechanic__img {
   width: 500px;
   height: 350px;
-  background-image: url(../../public/image/mechanics.png);
+  background-image: url(/images/machanical/mechanics.png);
   background-size: cover;
   background-position: center;
 }
