стилизовал страницу с электронными девайсами

--- a/frontend/src/styles/index.sass
+++ b/frontend/src/styles/index.sass
@@ -2,3 +2,21 @@
     max-width: 1440px
     width: 100%
     margin: 0 auto
+    margin-top: 20px
+
+.backLink
+    font-size: 20px
+    height: 30px
+    margin-bottom: 10px
+    font-weight: bold
+    background: var(--color-backlink)
+    background-size: 200% auto
+    -webkit-background-clip: text
+    background-clip: text
+    color: transparent
+    animation: flowText 3s linear infinite
+
+
+@keyframes flowText 
+    to 
+        background-position: 200% center 
