--- a/frontend/src/styles/variables.sass
+++ b/frontend/src/styles/variables.sass
@@ -1,6 +1,7 @@
 :root
     --color-white: #FFFFFF
     --color-black: #000000
+    --color-gray: #ffffff
     --box-shadow:  8px 8px 15px -2px rgba(0, 0, 0, 0.3),-8px -8px 15px -2px rgba(0, 0, 0, 0.3)
     --color-gradient-button:linear-gradient(180deg, rgba(204, 188, 251, 1) 0%, rgba(237, 237, 237, 1) 36%, #ededed 47%, rgba(237, 237, 237, 1) 57%, rgba(204, 188, 251, 1) 97%)
     --font-size-desktop: 24px
