--- a/frontend/src/styles/components/card.sass
+++ b/frontend/src/styles/components/card.sass
@@ -2,7 +2,7 @@
 .cards 
     display: grid
     grid-template-columns: repeat(auto-fit,minmax(340px,1fr))
-    gap: 3rem
+    gap: 4rem
     justify-content: center
     max-width: 1300px
 
@@ -11,7 +11,6 @@
 .card 
     background: white
     border-radius: 16px
-    
     overflow: hidden
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08)
     cursor: pointer
@@ -26,7 +25,7 @@
 
 
 .card:hover 
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12)
+    box-shadow: var(--box-shadow)
 
 
 .photo 
