--- a/frontend/src/styles/components/card.sass
+++ b/frontend/src/styles/components/card.sass
@@ -1,4 +1,3 @@
-
 .cards 
     display: grid
     grid-template-columns: repeat(auto-fit,minmax(340px,1fr))
@@ -13,8 +12,8 @@
     border-radius: 16px
     overflow: hidden
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08)
-    cursor: pointer
-    transition: box-shadow 0.2s
+    transition: box-shadow 0.3s ease-in-out
+    cursor: default
     &__button
         background-image: var(--color-gradient)
         width: 100%
@@ -22,7 +21,10 @@
         border: 0 solid
         border-radius: 30px
         font-size: var(--font-size-desktop)
-
+        box-shadow: 0 0 0 #ffff
+        transition: box-shadow 0.3s ease-in-out
+    &__button:hover
+        box-shadow: var(--box-shadow-blue)
 
 .card:hover 
     box-shadow: var(--box-shadow)
