--- a/frontend/src/styles/pages/electronicsdetail.sass
+++ b/frontend/src/styles/pages/electronicsdetail.sass
@@ -11,7 +11,7 @@
     border-radius: 16px
     overflow: hidden
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.08)
-    transition: box-shadow 0.2s
+    transition: box-shadow 0.3s ease-in-out
 
     &__content
         padding: 1rem
@@ -26,6 +26,10 @@
         cursor: pointer
         margin-bottom: 20px
         font-family: tt-r
+        box-shadow: 0 0 0 #ffff
+        transition: box-shadow 0.3s ease-in-out
+    &__button:hover
+        box-shadow: var(--box-shadow-blue)
 
 h3
     text-align: center
@@ -44,43 +48,6 @@ h3
     background-position: center
     object-fit: contain
 
-
-.modal
-
-    position: fixed
-    inset: 0
-    background: rgba(0, 0, 0, 0.7)
-    display: flex
-    align-items: center
-    justify-content: center
-    z-index: 1000
-    backdrop-filter: blur(5px)
-    &__content
-        background: white
-        width: 90%
-        max-width: 600px
-        max-height: 90vh
-        overflow-y: auto
-        border-radius: 20px
-        padding: 2.5rem
-        position: relative
-        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3)
-    &__close
-        position: absolute
-        top: 1rem
-        right: 1rem
-        font-size: 2.5rem
-        cursor: pointer
-        color: #718096
-    &__close:hover
-        color: #2d3748
-
-    &__image
-        width: 100%
-        max-height: 50vh
-        border-radius: 12px
-        margin-bottom: 1.5rem
-        object-fit: contain
 
 
 
