--- a/frontend/src/styles/components/modaldetailmechanic.sass
+++ b/frontend/src/styles/components/modaldetailmechanic.sass
@@ -1,18 +1,26 @@
 .modal-links
     display: flex
     
-
+.modal p
+    font-size: 22px
+    line-height: 1.45
+    color: var(--color-black)
+    text-align: center
+    margin: 0 auto 1.75rem
+    max-width: 90%
+    flex: 1 1 auto
 
 .download-btn
-    width: 150px 
+    width: 130px 
     height: 40px
-    background-image: var(--color-gradient)
-    padding: 0.5rem
+    background-color: var(--color-gradient-button)
+    padding: 0.3rem
+    font-size: 20px
     text-align: center
     border-radius: 20px
     text-decoration: none
     color: var(--color-black)
-    margin-right: 70px
+    margin-right: 40px
     box-shadow: 0 0 0 #ffff
     transition: box-shadow 0.3s ease-in-out
 .download-btn:last-child
