--- a/frontend/src/styles/pages/home.sass
+++ b/frontend/src/styles/pages/home.sass
@@ -33,7 +33,7 @@
         text-align: center
         margin-bottom: 10px
         font-family: tt-b
-        font-size:  var(--font-size-desktop-bold)
+        font-size:  28px
     &__card
         width: 520px
         height: 450px
@@ -76,7 +76,7 @@
         text-align: center
         margin-bottom: 10px
         font-family: tt-b
-        font-size: var(--font-size-desktop-bold)
+        font-size: 28px
     &__card
         width: 520px
         height: 450px
