готовый проект без фото

--- a/frontend/src/styles/pages/home.sass
+++ b/frontend/src/styles/pages/home.sass
@@ -1,97 +1,230 @@
-
 .catalog 
     display: flex
     justify-content: center
-    align-items: center  
+    align-items: center
     height: 100vh
     flex-direction: row-reverse
     justify-content: space-evenly
 
 
+.electronic 
+    display: flex
+    flex-direction: column
+    align-items: center
+
+
+.electronic__container 
+    display: flex
+    border-radius: 30px
+    border: 2px solid var(--color-black)
+    flex-direction: column
+    padding-top: 20px
+    padding-bottom: 20px
+    box-shadow: var(--box-shadow)
+    transition: background-color 0.5s ease, width 0.7s ease-in
+
+
+.electronic__container:hover 
+    background-color: #d1d1d1
+    opacity: 90%
+
+
+.electronic__title 
+    text-align: center
+    margin-bottom: 10px
+    font-family: tt-b
+    font-size: 28px
+
+
+.electronic__card 
+    width: 520px
+    height: 450px
+    flex-direction: column
+    text-decoration: none
+    padding-left: 10px
+    padding-right: 10px
+
+
+.electronic__img 
+    width: 500px
+    height: 350px
+    background-image: url(/images/electronic/electronic.png)
+    background-size: cover
+    background-position: center
+
+
+.electronic__text 
+    font-size: var(--font-size-desktop)
+    color: var(--color-black)
+    text-align: center
+
+
+.mechanic 
+    display: flex
+    flex-direction: column
+    align-items: center
+
+
+.mechanic__container 
+    display: flex
+    border-radius: 30px
+    border: 2px solid var(--color-black)
+    flex-direction: column
+    padding-top: 20px
+    padding-bottom: 20px
+    box-shadow: var(--box-shadow)
+    transition: background-color 0.5s ease, width 0.7s ease-in
+
+
+.mechanic__container:hover 
+    background-color: #d1d1d1
+    opacity: 90%
+
+
+.mechanic__title 
+    text-align: center
+    margin-bottom: 10px
+    font-size: 28px
+
+
+.mechanic__card 
+    width: 520px
+    height: 450px
+    flex-direction: column
+    text-decoration: none
+    padding-left: 10px
+    padding-right: 10px
+
+
+.mechanic__img 
+    width: 500px
+    height: 350px
+    background-image: url(/images/mechanical/mechanics.png)
+    background-size: cover
+    background-position: center
+
+
+.mechanic__text 
+    font-family: tt-r
+    font-size: var(--font-size-desktop)
+    color: var(--color-black)
+    text-align: center
+
+
+@media (max-width: 1200px) 
+    .catalog 
+        height: auto
+        min-height: 80vh
+
+        flex-direction: row-reverse
+        padding: 20px 20px
+        gap: 30px
     
-.electronic
-    display: flex
-    flex-direction: column
-    align-items: center
-    &__container
-        display: flex
-        border-radius: 30px
-        border: 2px solid var(--color-black)
-        flex-direction: column
-        padding-top: 20px
-        padding-bottom: 20px
-        margin-bottom: 50px
-        box-shadow: var(--box-shadow)
-        transition: background-color 0.5s ease, width 0.7s ease-in
-    &__container:hover
-        background-color: #d1d1d1
-        opacity:90%
-            
+    
+    .electronic__card
+        width: 450px
+        height: auto
+        min-height: 400px
+        max-height: 470px
+    .mechanic__card 
+        width: 450px
+        height: auto
+        min-height: 400px
+        max-height: 470px
+    
+    .electronic__img,
+    .mechanic__img 
+        width: 430px
+        height: 300px
+    
+    
+    .electronic__title,
+    .mechanic__title 
+        font-size: 24px
+    
+    
+    .electronic__text,
+    .mechanic__text 
+        font-size: 18px
+    
+
+
+
+@media (max-width: 768px) 
+    .catalog 
+        padding: 30px 15px
+        gap: 20px
+    
+    
+    .electronic__container,
+    .mechanic__container 
+        margin-bottom: 30px
+        padding-top: 15px
+        padding-bottom: 15px
+        max-height: 400px
+    
+    .electronic__card,
+    .mechanic__card 
+        width: 100%
+        max-width: 350px
+        min-height: 350px
         
-        
-    &__title
-        text-align: center
+        padding-left: 8px
+        padding-right: 8px
+    
+    
+    .electronic__img,
+    .mechanic__img 
+        width: 100%
+        max-width: 330px
+        height: 250px
+    
+    
+    .electronic__title,
+    .mechanic__title 
+        font-size: 22px
+        margin-bottom: 8px
+    
+    
+    .electronic__text,
+    .mechanic__text 
+        font-size: 16px
+    
+
+
+
+@media (max-width: 480px) 
+    .catalog 
+        padding: 20px 10px
+        flex-direction: column
+    
+    .electronic__card,
+    .mechanic__card 
+        max-width: 280px
+        min-height: 300px
+    
+    
+    .electronic__img,
+    .mechanic__img 
+        min-width: 260px
+        max-width: 280px
+        height: 200px
         margin-bottom: 10px
-        font-family: tt-b
-        font-size:  28px
-    &__card
-        width: 520px
-        height: 450px
-        flex-direction: column
-        text-decoration: none
-        padding-left: 10px
-        padding-right: 10px
-    &__img
-        width: 500px
-        height: 350px
-        background-image: url(/images/electronic/electronic.png)
-        background-size: cover
-        background-position: center
-    &__text
-        font-family: tt-r
-        font-size: var(--font-size-desktop)
-        color: var(--color-black)
-        text-align: center
-
-
-
-.mechanic
-    display: flex
-    flex-direction: column
-    align-items: center
-    &__container
-        display: flex
-        border-radius: 30px
-        border: 2px solid var(--color-black)
-        flex-direction: column
-        padding-top: 20px
-        padding-bottom: 20px
-        margin-bottom: 50px
-        box-shadow: var(--box-shadow)
-        transition: background-color 0.5s ease, width 0.7s ease-in
-    &__container:hover
-        background-color: #d1d1d1
-        opacity:90%
-    &__title
-        text-align: center
-        margin-bottom: 10px
-        font-family: tt-b
-        font-size: 28px
-    &__card
-        width: 520px
-        height: 450px
-        flex-direction: column
-        text-decoration: none
-        padding-left: 10px
-        padding-right: 10px
-    &__img
-        width: 500px
-        height: 350px
-        background-image: url(/images/mechanical/mechanics.png)
-        background-size: cover
-        background-position: center
-    &__text
-        font-family: tt-r
-        font-size: var(--font-size-desktop)
-        color: var(--color-black)
-        text-align: center
+    
+    
+    .electronic__title,
+    .mechanic__title 
+        font-size: 18px
+    
+    
+    .electronic__text,
+    .mechanic__text 
+        font-size: 14px
+    
+    
+    .electronic__container,
+    .mechanic__container 
+        border-radius: 20px
+        margin-bottom: 20px
+        max-height: 330px
+    
