--- a/frontend/src/styles/index.sass
+++ b/frontend/src/styles/index.sass
@@ -3,7 +3,7 @@
     width: 100%
     margin: 0 auto
     margin-top: 20px
-
+    font-family: SPECTRAL-REGULAR
 .backLink
     font-size: 20px
     height: 30px
