--- a/frontend/src/styles/pages/electronics.sass
+++ b/frontend/src/styles/pages/electronics.sass
@@ -4,14 +4,52 @@
     padding: 1rem 1rem
     display: flex
     flex-direction: column
-    align-items: center
-header
+    align-items: flex-start 
+    position: relative
+
+
+header 
     display: flex
     flex-direction: column
-    position: relative
-    left:-455px
+    width: 100% 
+    align-items: flex-start 
+    margin-bottom:  20px
+
+
 a
     display: block
     text-decoration: none
+    
+
+
+@media (max-width: 1200px) 
+    .container 
+        padding: 0.875rem 1.5rem
+    
+    
+
+    
+
+
+
+@media (max-width: 768px) 
+    .container 
+        padding: 0.75rem 1rem
+        align-items: stretch /* На мобильных можно растянуть на всю ширину */
+    
+    
+    header 
+        align-items: flex-start
+        width: 100%
+    
+
+
+@media (max-width: 480px) 
+    .container 
+        padding: 0.5rem 0.75rem
+    
+
+
+    
 
 
