--- a/frontend/src/styles/styles_css/font.css
+++ b/frontend/src/styles/styles_css/font.css
@@ -1,12 +1,6 @@
 @font-face {
-  font-family: "tt-b";
-  src: url("../fonts/TTTRAVELS-BOLD.woff2") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-@font-face {
-  font-family: "tt-r";
-  src: url("../fonts/TTTRAVELS-REGULAR.woff2") format("truetype");
+  font-family: "SPECTRAL-REGULAR";
+  src: url("../fonts/SPECTRAL-REGULAR.woff2") format("truetype");
   font-style: normal;
   font-weight: normal;
 }/*# sourceMappingURL=font.css.map */
