--- a/frontend/src/styles/pages/electronics.sass
+++ b/frontend/src/styles/pages/electronics.sass
@@ -35,7 +35,7 @@ a
 @media (max-width: 768px) 
     .container 
         padding: 0.75rem 1rem
-        align-items: stretch /* На мобильных можно растянуть на всю ширину */
+        align-items: stretch 
     
     
     header 
