--- a/frontend/src/styles/pages/electronicsdetail.sass
+++ b/frontend/src/styles/pages/electronicsdetail.sass
@@ -13,6 +13,7 @@
     border: 1px solid var(--color-black)
     border-radius: 16px
     overflow: hidden
+    
     box-shadow: 0 4px 15px rgba(0,0,0,0.07)
     transition: all 0.28s ease
     display: flex
@@ -32,13 +33,16 @@
 
 .device-card__button 
     background-color: var(--color-gradient-button)
+    color: #000
     width: 100%
+    font-size: 30px
     height: 40px
     border: 0 solid
     border-radius: 30px
     font-size: var(--font-size-desktop)
     box-shadow: 0 0 0 #ffff
     transition: box-shadow 0.3s ease-in-out
+    text-align: center
     cursor: pointer
 
 
@@ -192,6 +196,7 @@ h3
     
     .device-card__content 
         padding: 2rem 1.75rem
+        font-size: 22px
     
     
     h3 
